--- a/final_ml_checkpoint/machine_learning.ipynb
+++ b/final_ml_checkpoint/machine_learning.ipynb
@@ -2801,7 +2801,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "logistic regression=5\n",
+    " "
+   ]
   }
  ],
  "metadata": {
